kubernetes/hedera-integration-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f prod_gcloud.yml convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: hedera-integration-node
  name: hedera-integration-node
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hedera-integration-node
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f prod_gcloud.yml convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/hedera-app-network: "true"
        io.kompose.service: hedera-integration-node
    spec:
      containers:
        - image: gcr.io/pwc-bat-test/hedera-integration-node:v23
          name: hedera-integration-node
          ports:
            - containerPort: 8181
          resources: {}
      restartPolicy: Always
status: {}
