kubernetes/hedera-mongodb-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f prod_gcloud.yml convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: hedera-mongodb-service
  name: hedera-mongodb-service
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: hedera-mongodb-service
status:
  loadBalancer: {}
