kubernetes/hedera-web-service-02-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f prod_gcloud.yml convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: hedera-web-service-02
  name: hedera-web-service-02
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 11136
  selector:
    io.kompose.service: hedera-web-service-02
status:
  loadBalancer: {}
