kubernetes/hedera-web-service-03-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/backend-config: '{"default": "hedera-backendconfig"}'
    cloud.google.com/neg: '{"ingress": true}'
    kompose.cmd: kompose -f prod_gcloud.yml convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: hedera-web-service-03
  name: hedera-web-service-03
spec:
  type: ClusterIP
  ports:
    - name: "8003"
      port: 8003
      protocol: TCP
      targetPort: 11136
  selector:
    io.kompose.service: hedera-web-service-03
