kubernetes/hedera-web-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f prod_gcloud.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: hedera-web-service
  name: hedera-web-service
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 11136
  selector:
    io.kompose.service: hedera-web-service
status:
  loadBalancer: {}
