kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
spec:
  backend:
    serviceName: hedera-web-service
    servicePort: 8001
